--- a/src/components/main/About.css
+++ b/src/components/main/About.css
@@ -76,3 +76,23 @@ p {
   cursor: pointer;
   transition: 0.5s;
 }
+
+@media (max-width: 640px) {
+  .aboutSection {
+    margin-top: 3em;
+    margin-bottom: 4em;
+    margin-left: 1em;
+  }
+  .aboutBg {
+    display: none;
+  }
+
+  .aboutText {
+    margin-bottom: 3em;
+    width: 650px;
+  }
+
+  .aboutContent {
+    margin: 0 auto;
+  }
+}
