--- a/src/components/main/Funds.css
+++ b/src/components/main/Funds.css
@@ -117,3 +117,85 @@ h2 {
   margin-top: 2em;
   margin-bottom: 6em;
 }
+
+.btnMore {
+  width: 160px;
+  height: 51.08px;
+  background: var(--cor-primaria-verde);
+  border-radius: 30px;
+  border: none;
+  color: var(--cor-branca);
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 25px;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+@media (max-width: 640px) {
+  .fund {
+    display: block;
+    position: relative;
+    width: 57vh;
+    margin: 0 auto;
+  }
+
+  .fundContainer {
+    margin: 0 auto 10em;
+    display: block;
+    align-content: stretch;
+    flex-wrap: wrap;
+  }
+
+  .fundExternal {
+    display: block;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .textContainer {
+    display: block;
+  }
+
+  .fundCard {
+    text-align: center;
+    margin-left: 5em;
+    width: 40vh;
+    max-width: 53vh;
+  }
+
+  .card3 {
+    display: none;
+  }
+
+  .card4 {
+    display: none;
+  }
+
+  .fundTitle {
+    width: 57vh;
+    height: 27vh;
+    background: var(--cor-branca);
+    margin-right: -30px;
+  }
+
+  .textH3 {
+    margin-left: 6em;
+    width: 650px;
+  }
+
+  .fundH2 {
+    width: 53vh;
+    height: 300px;
+    background: var(--cor-primaria-verde);
+    margin-left: 1em;
+    padding-left: 3em;
+    padding-top: 0.5em;
+  }
+
+  .fundContainer button {
+    margin: 6em 0 2em 20vh;
+  }
+}
