--- a/src/components/main/Funds.css
+++ b/src/components/main/Funds.css
@@ -134,68 +134,41 @@ h2 {
   text-transform: uppercase;
 }
 
-@media (max-width: 640px) {
+@media screen and (max-width: 414px), screen and (max-height: 896px) {
   .fund {
-    display: block;
-    position: relative;
-    width: 57vh;
-    margin: 0 auto;
-  }
-
-  .fundContainer {
-    margin: 0 auto 10em;
-    display: block;
-    align-content: stretch;
-    flex-wrap: wrap;
-  }
-
-  .fundExternal {
-    display: block;
-    justify-content: center;
-    align-content: center;
-  }
-
-  .textContainer {
-    display: block;
-  }
-
-  .fundCard {
-    text-align: center;
-    margin-left: 5em;
-    width: 40vh;
-    max-width: 53vh;
-  }
-
-  .card3 {
-    display: none;
-  }
-
-  .card4 {
-    display: none;
+    margin: -11em 0 0 0;
   }
 
   .fundTitle {
-    width: 57vh;
-    height: 27vh;
-    background: var(--cor-branca);
-    margin-right: -30px;
-  }
-
-  .textH3 {
-    margin-left: 6em;
-    width: 650px;
+    margin-inline: 2em;
   }
 
   .fundH2 {
-    width: 53vh;
-    height: 300px;
-    background: var(--cor-primaria-verde);
-    margin-left: 1em;
-    padding-left: 3em;
-    padding-top: 0.5em;
+    width: 48vh;
+    margin-left: -121px;
+    height: 35vh;
+    margin-bottom: 12vh;
+  }
+
+  .textH2 h2 {
+    width: 32vh;
+  }
+
+  .fundCard {
+    margin: 0 0 0 0;
+  }
+
+  .fundCard:nth-child(odd) {
+    margin: 0 1em 3em 7em;
+  }
+
+  .fundCard p {
+    font-size: 12px;
+    width: 40vh;
   }
 
   .fundContainer button {
-    margin: 6em 0 2em 20vh;
+    margin-bottom: 1em;
+    margin-left: 32em;
   }
 }
