--- a/src/components/main/About.css
+++ b/src/components/main/About.css
@@ -18,14 +18,14 @@
   font-weight: 300;
   font-size: 48px;
   line-height: 59px;
-  color: var(--cor-secundaria-azul);
+  color: var(--blue-secondary);
   margin-bottom: 0.5em;
 }
 
 .aboutH2::before {
   content: '';
   display: inline-block;
-  border: 4px solid var(--cor-primaria-verde);
+  border: 4px solid var(--green-primary);
   width: 11px;
   height: 11px;
   margin: 0 10px 7px 0;
@@ -37,7 +37,7 @@
   font-weight: 700;
   font-size: 48px;
   line-height: 59px;
-  color: var(--cor-primaria-verde);
+  color: var(--green-primary);
 }
 
 .aboutText {
@@ -56,10 +56,10 @@ p {
 .btnMore {
   width: 160px;
   height: 51.08px;
-  background: var(--cor-primaria-verde);
+  background: var(--green-primary);
   border-radius: 30px;
   border: none;
-  color: var(--cor-branca);
+  color: var(--white);
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
@@ -70,21 +70,21 @@ p {
 }
 
 .btnMore:hover {
-  background-color: var(--cor-secundaria-azul);
-  color: var(--cor-primaria-verde);
+  background-color: var(--blue-secondary);
+  color: var(--green-primary);
   font-weight: 800;
   cursor: pointer;
   transition: 0.5s;
 }
 
-@media screen and (max-width: 414px), screen and (max-height: 896px) {
+@media screen and (max-width: 360px), screen and (max-height: 740px) {
   .aboutSection {
     padding-top: 0;
   }
 
   .aboutBg {
-    width: 505px;
-    height: 430px;
+    width: 571px;
+    height: 489px;
     margin-top: -2em;
   }
 
