--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -13,7 +13,7 @@
   left: 50%;
   top: -21.55%;
   transform: translateX(-50%);
-  background: var(--cor-branca);
+  background: var(--white);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -33,7 +33,7 @@
   text-align: center;
   padding-bottom: 1.5em;
 
-  color: var(--cor-secundaria-azul);
+  color: var(--blue-secondary);
 }
 
 .inputForm {
@@ -52,7 +52,7 @@
 .btnNews {
   width: 262px;
   height: 60px;
-  background-color: var(--cor-primaria-verde);
+  background-color: var(--green-primary);
   border: none;
   border-top-right-radius: 50px;
   border-bottom-right-radius: 50px;
@@ -61,12 +61,12 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 25px;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
 .btnNews:hover {
   cursor: pointer;
-  background-color: var(--cor-secundaria-azul);
+  background-color: var(--blue-secondary);
   transition: 0.4s;
 }
 
@@ -97,7 +97,7 @@
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
 .icons img {
@@ -113,7 +113,7 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 18px;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
 .menu {
@@ -136,7 +136,7 @@
   font-weight: 700;
   font-size: 22px;
   line-height: 30px;
-  color: var(--cor-branca);
+  color: var(--white);
   margin-bottom: 0.5em;
 }
 
@@ -147,7 +147,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 170%;
-  color: var(--cor-branca);
+  color: var(--white);
   list-style: none;
 }
 
@@ -161,26 +161,22 @@
   font-weight: 500;
   font-size: 11px;
   line-height: 150%;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
-@media screen and (max-width: 414px), screen and (max-height: 896px) {
+@media screen and (max-width: 360px), screen and (max-height: 740px) {
   .footerSection {
     position: relative;
-    height: 56vh;
-    width: 124vh;
+    height: 500px;
+    width: 1189px;
   }
 
   .formCadastro {
     position: relative;
-    width: 120vh;
+    width: 1020px;
     height: 227px;
     left: 50%;
     top: -22%;
-    transform: translateX(-50%);
-    background: var(--cor-branca);
-    display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
     box-shadow: 0px -50px 30px 0px rgba(13, 16, 37, 0.06);
@@ -191,7 +187,7 @@
   }
 
   .footerContainer {
-    width: 114vh;
+    width: 920px;
     padding-top: 0;
     padding-bottom: 2em;
     min-height: 0;
