--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -4,7 +4,7 @@
   background-position: center;
   height: 100vh;
   width: 100%;
-  background-color: var(--cor-secundaria-azul);
+  background-color: var(--blue-secondary);
 }
 
 .externalMain {
@@ -54,12 +54,12 @@
   line-height: 125%;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
 .linkMain:hover {
-  color: var(--cor-primaria-verde);
-  border-bottom: 2px solid var(--cor-primaria-verde);
+  color: var(--green-primary);
+  border-bottom: 2px solid var(--green-primary);
   transition: 0.4s;
 }
 
@@ -73,23 +73,23 @@
   line-height: 125%;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
   width: 150px;
   height: 45px;
-  border: 2px solid var(--cor-primaria-verde);
+  border: 2px solid var(--green-primary);
   border-radius: 50px;
 }
 
 .btnLogin:hover {
-  background-color: var(--cor-branca);
-  color: var(--cor-primaria-verde);
+  background-color: var(--white);
+  color: var(--green-primary);
   font-weight: 800;
   cursor: pointer;
   transition: 0.4s;
 }
 
 .btnNow {
-  background-color: var(--cor-primaria-verde);
+  background-color: var(--green-primary);
   text-transform: uppercase;
   font-family: 'Montserrat';
   font-style: normal;
@@ -98,7 +98,7 @@
   line-height: 125%;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
   width: 180px;
   height: 45px;
   border-radius: 50px;
@@ -106,9 +106,9 @@
 }
 
 .btnNow:hover {
-  background-color: var(--cor-branca);
-  border: 2px solid var(--cor-primaria-verde);
-  color: var(--cor-primaria-verde);
+  background-color: var(--white);
+  border: 2px solid var(--green-primary);
+  color: var(--green-primary);
   font-weight: 800;
   cursor: pointer;
   transition: 0.5s;
@@ -126,7 +126,7 @@
 
 .banner {
   max-width: 1260px;
-  margin-left: 11em;
+  margin-left: 5em;
   position: absolute;
   top: 40%;
 }
@@ -137,12 +137,12 @@
   line-height: 40px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
   margin-bottom: 0.5em;
 }
 
 .btnMoreBanner {
-  background-color: var(--cor-primaria-verde);
+  background-color: var(--green-primary);
   text-transform: uppercase;
   font-family: 'Montserrat';
   font-style: normal;
@@ -151,7 +151,7 @@
   line-height: 125%;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
   width: 180px;
   height: 45px;
   border-radius: 50px;
@@ -159,19 +159,19 @@
 
 .btnMoreBanner:hover {
   background-color: transparent;
-  border: 2px var(--cor-primaria-verde) solid;
-  color: var(--cor-primaria-verde);
+  border: 2px var(--green-primary) solid;
+  color: var(--green-primary);
   font-weight: 800;
   cursor: pointer;
   transition: 0.4s;
 }
 
-@media screen and (max-width: 414px), screen and (max-height: 896px) {
+@media screen and (max-width: 360px), screen and (max-height: 740px) {
   .headerContainer {
     background-size: auto;
     background-position: center;
-    height: 63vh;
-    width: 124vh;
+    height: 650px;
+    width: 1189px;
     margin-bottom: 2em;
   }
 
@@ -182,7 +182,7 @@
 
   .externalMain {
     margin: 0 5em;
-    max-width: 120vh;
+    max-width: 1020px;
   }
 
   .containerMain {
@@ -216,7 +216,7 @@
 
   .banner {
     margin: auto;
-    top: 20%;
+    top: 30%;
   }
 
   .banner h1 {
@@ -224,9 +224,9 @@
     line-height: 40px;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    color: var(--cor-branca);
+    color: var(--white);
     margin: 0 0 0.8em 0.5em;
-    width: 54vh;
+    width: 70vh;
   }
 
   .btnMoreBanner {
