--- a/src/components/main/Funds.css
+++ b/src/components/main/Funds.css
@@ -24,7 +24,7 @@
 .fundTitle {
   width: 711px;
   height: 457px;
-  background: var(--cor-branca);
+  background: var(--white);
   margin-right: -30px;
 }
 
@@ -37,14 +37,14 @@
 
 .titleH3 {
   font-family: 'Montserrat', sans-serif;
-  color: var(--cor-primaria-verde);
+  color: var(--green-primary);
   font-size: 48px;
 }
 
 .titleH3::before {
   content: '';
   display: inline-block;
-  border: 4px solid var(--cor-primaria-verde);
+  border: 4px solid var(--green-primary);
   width: 11px;
   height: 11px;
   margin: 0 10px 7px 0;
@@ -61,7 +61,7 @@ p {
 .fundH2 {
   width: 605px;
   height: 350px;
-  background: var(--cor-primaria-verde);
+  background: var(--green-primary);
   margin-left: -30px;
 }
 
@@ -107,7 +107,7 @@ h2 {
   line-height: 30px;
   letter-spacing: 0.1em;
   text-transform: uppercase;
-  color: var(--cor-secundaria-azul);
+  color: var(--blue-secondary);
   margin-top: 0.4em;
   margin-bottom: 0.6em;
 }
@@ -121,10 +121,10 @@ h2 {
 .btnMore {
   width: 160px;
   height: 51.08px;
-  background: var(--cor-primaria-verde);
+  background: var(--green-primary);
   border-radius: 30px;
   border: none;
-  color: var(--cor-branca);
+  color: var(--white);
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 700;
@@ -134,9 +134,9 @@ h2 {
   text-transform: uppercase;
 }
 
-@media screen and (max-width: 414px), screen and (max-height: 896px) {
+@media screen and (max-width: 360px), screen and (max-height: 740px) {
   .fund {
-    margin: -11em 0 0 0;
+    margin: -8em 0 0 0;
   }
 
   .fundTitle {
@@ -144,14 +144,14 @@ h2 {
   }
 
   .fundH2 {
-    width: 48vh;
-    margin-left: -121px;
-    height: 35vh;
-    margin-bottom: 12vh;
+    width: 475px;
+    margin-left: -85px;
+    height: 327px;
+    margin-bottom: 82px;
   }
 
   .textH2 h2 {
-    width: 32vh;
+    width: 285px;
   }
 
   .fundCard {
@@ -159,12 +159,12 @@ h2 {
   }
 
   .fundCard:nth-child(odd) {
-    margin: 0 1em 3em 7em;
+    margin: 0 1em 3em 5em;
   }
 
   .fundCard p {
-    font-size: 12px;
-    width: 40vh;
+    font-size: 14px;
+    width: 450px;
   }
 
   .fundContainer button {
