--- a/src/components/main/Stats.css
+++ b/src/components/main/Stats.css
@@ -1,5 +1,5 @@
 .fundSection {
-  background: var(--cor-secundaria-azul);
+  background: var(--blue-secondary);
   height: 774px;
   margin-bottom: -360px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -26,14 +26,14 @@
   font-weight: 700;
   font-size: 50px;
   line-height: 60px;
-  color: var(--cor-primaria-verde);
+  color: var(--green-primary);
   margin-bottom: 0.1em;
 }
 
 .edgeNumbers {
   width: 33px;
   height: 4px;
-  background-color: var(--cor-primaria-verde);
+  background-color: var(--green-primary);
   border-radius: 50px;
   margin-bottom: 1.4em;
 }
@@ -45,7 +45,7 @@
   font-size: 15px;
   line-height: 22px;
   text-transform: uppercase;
-  color: var(--cor-branca);
+  color: var(--white);
 }
 
 .dataSubtext {
@@ -67,14 +67,14 @@
   line-height: 60px;
   text-align: center;
   text-transform: uppercase;
-  color: var(--cor-primaria-verde);
+  color: var(--green-primary);
   margin-left: -5px;
 }
 
-@media screen and (max-width: 414px), screen and (max-height: 896px) {
+@media screen and (max-width: 360px), screen and (max-height: 740px) {
   .fundSection {
     height: 62vh;
-    width: 124vh;
+    width: 1189px;
     margin-bottom: 0;
   }
 
@@ -82,7 +82,7 @@
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: 2.5em;
+    gap: 1.5em;
   }
 
   .dataNumbers {
